# MTK_kernel_modules

./: Android.mk  BUILD.bazel  Kbuild  Kbuild.include  Makefile  README.md  build_cdev_wifi.mk  fw_log_ics.c  fw_log_wifi.c  fw_log_wifi.h  init.wlan_drv.rc  ring.c  wifi_pwr_on.c  wifi_pwr_on.h  wmt_cdev_wifi.c  wmt_chrdev_wifi.c
adaptor/: Kbuild  (+2 more)
afs_common_utils/: BUILD.bazel  Kbuild  Makefile
afs_common_utils/include/: jank_detection_common.h  jank_detection_common_core.h  jank_detection_utils.h
afs_common_utils/src/: jank_detection_common.c  jank_detection_utils.c
afs_core_cus/: BUILD.bazel  Kbuild  Makefile  OWNERS
afs_core_cus/src/: jank_detection_core.o_shipped  jank_detection_core_init.c
connectivity/bt/linux_v2/: .checkpatch.conf  .gitignore  Android.mk  BUILD.bazel  Kbuild  Makefile  OWNERS  btmtk_buffer_mode.c  btmtk_char_dev.c  btmtk_chip_reset.c  btmtk_fw_log.c  btmtk_main.c  btmtk_queue.c  btmtk_woble.c  init.btmtk_sdio.rc  init.btmtk_uart.rc  release_note
connectivity/conninfra/: Android.mk  BUILD.bazel  Kbuild  Makefile  OWNERS
connectivity/conninfra/adaptor/: conn_kern_adaptor.c  connadp_internal.c  conninfra_dev.c
connectivity/conninfra/base/: msg_thread.c  osal.c  osal_dbg.c
connectivity/conninfra/conf/: conninfra_conf.c
connectivity/conninfra/core/: conninfra_core.c
connectivity/conninfra/debug_utility/: conninfra_dbg.c
connectivity/conninfra/include/: conninfra.h  connsys_step.h  connv3.h
connectivity/conninfra/platform/: clock_mng.c  consys_hw.c  consys_hw_plat_data.c  consys_reg_mng.c  coredump_mng.c  emi_mng.c  pmic_mng.c
connectivity/conninfra/src/: conninfra.c  conninfra_dev.c
connectivity/conninfra/test/: cal_test.c  chip_rst_test.c  conf_test.c  conninfra_step_test.c  conninfra_step_test_util.c  conninfra_test.c  connsyslog_test.c  dump_test.c
connectivity/fmradio/: Android.mk  BUILD.bazel  Kbuild  Kbuild.include  Makefile  dummy.c  init.fmradio_drv.rc
connectivity/fmradio/core/: fm_cmd.c  fm_config.c  fm_link.c  fm_main.c  fm_module.c  fm_patch.c  fm_rds_parser.c  fm_reg_utils.c  fm_utils.c
connectivity/fmradio/inc/: fm_config.h  fm_dbg.h  fm_err.h  fm_ext_api.h  fm_interface.h  fm_ioctl.h  fm_main.h  fm_reg_utils.h  fm_utils.h
connectivity/fmradio/plat/: conn_infra.c  legacy_wmt.c
gpu/: Android.mk  BUILD.bazel  Kbuild  Makefile  OWNERS  mt6761  mt6768  mt6855  mt6895
gpu/gpu_rgx/: m1.15RTM26133109_TD  mt6765
gpu/mt6761/: Makefile
gpu/mt6765/: Makefile  m24.2ED6620798
gpu/mt6768/: Makefile
gpu/mt6781/: Makefile
gpu/mt6833/: Makefile
gpu/mt6853/: Makefile
gpu/mt6877/: Makefile
gpu/mt6878/: Makefile
gpu/mt6893/: Makefile
gpu/mt6897/: Makefile  mali_avalon
gpu/mt6899/: Makefile
gpu/mt6985/: Makefile  mali_avalon  mali_valhall
gpu/mt6989/: Makefile
gpu/mt6991/: Makefile
met_drv_v3/: BUILD.bazel  Kbuild  Makefile
met_drv_v3/common/: Kbuild  cookie.c  core_plf_init.c  core_plf_init.h  core_plf_trace.c  core_plf_trace.h  cpu_dsu.c  cpu_dsu.h  cpu_pmu.c  cpu_pmu.h  dummy_header.c  interface.c  interface.h  mem_stat.c  mem_stat.h  met_backlight.c  met_drv.h  met_emi.c  met_kernel_symbol.h  met_main.c  met_power.h  met_ptpod.c  met_struct.h  met_tag.h  met_tag_ex.c  met_thermal.c  met_vcoredvfs.c  met_wall_time.c  met_workqueue.c  met_workqueue.h  mtk_emi_bm.c  mtk_emi_bm.h  mtk_emi_hw.h  mtk_gpu_metmonitor.c  mtk_typedefs.h  power.c  power.h  sampler.c  sampler.h  smmu_pmu.c  (+16 more)
met_drv_v3/default/: Kbuild  met_main.c
met_drv_v3/met_api/: BUILD.bazel  Kbuild  Makefile  met_api.h  met_ext_sym_util.h
mt66xx/: Android.mk  BUILD.bazel
mt66xx/6885/: Kbuild
mt66xx/6897/: Kbuild  btmtk_chip_reset.c  btmtk_main.c
mt66xx/6983/: btmtk_buffer_mode.c
mt66xx/btif/: Kbuild  btmtk_beif.c  btmtk_btif_main.c  btmtk_char_dev.c  btmtk_mt66xx.c  btmtk_queue.c
mt66xx/cfg_example/: bt.cfg
mt66xx/include/: btmtk_buffer_mode.h  btmtk_define.h  btmtk_main.h
mt66xx/wmt/: BUILD.bazel  stp_chrdev_bt.c
mtkcam/camsys/: BUILD.bazel  Kbuild  Makefile
mtkcam/ccusys/: BUILD.bazel  Kbuild  mtk_ccu_common.c  mtk_ccu_common.h  mtk_ccu_ipi.c  mtk_ccu_isp71.c  mtk_ccu_isp71.h
mtkcam/img_frm_sync/: BUILD.bazel  Kbuild  mtk_imgsys_frm_sync.c  mtk_imgsys_frm_sync.h  mtk_imgsys_frm_sync_internal.h  mtk_imgsys_frm_sync_internal_isp8.h  mtk_imgsys_frm_sync_isp8.c  mtk_imgsys_frm_sync_isp8.h
mtkcam/imgsensor/: BUILD.bazel  Kbuild  Makefile
mtkcam/imgsys/: BUILD.bazel  Kbuild  Makefile  mtk_imgsys-cmdq.c  mtk_imgsys-cmdq.h  mtk_imgsys-dev.c  mtk_imgsys-dev.h  mtk_imgsys-isp-debug.h  mtk_imgsys-isp7s.c  mtk_imgsys-isp7sp.c  mtk_imgsys-module.h  mtk_imgsys-of.h  mtk_imgsys-probe.h  mtk_imgsys-sys.c  mtk_imgsys-trace.c  mtk_imgsys-trace.h  mtk_imgsys-v4l2-debug.h  mtk_imgsys-v4l2.c  mtk_imgsys-worker.c  mtk_imgsys_v4l2.h
mtkcam/isp_pspm/: BUILD.bazel  Kbuild
mtkcam/mtk-aie/: BUILD.bazel  Kbuild  Kconfig  aie_mp_fw_7s_def.h  aie_mp_fw_7sp_def.h  mtk_aie-trace.c  mtk_aie-trace.h  mtk_aie.h  mtk_aie_53.c  mtk_aie_debug_7sp.c  mtk_aie_debug_7sp_1.c  mtk_aie_debug_7sp_2.c  mtk_aie_drv_isp7s.c  mtk_aie_drv_isp7sp.c  mtk_aie_reg_7.h  mtk_aie_reg_7sp.h
mtkcam/mtk-dpe/: BUILD.bazel  Kbuild  Kconfig  Makefile
mtkcam/mtk-hcp/: BUILD.bazel  Kbuild  mtk-hcp.c  mtk-hcp.h  mtk-hcp_isp7sp.c  mtk-hcp_kernelfence.c
mtkcam/mtk-ipesys-me/: BUILD.bazel  Kbuild  Makefile  mtk-ipesys-me.c  mtk-ipesys-me.h
mtkcam/mtk-mae/: BUILD.bazel  Kbuild  Kconfig  mtk-mae.c  mtk-mae.h
mtkcam/mtk-pda/: BUILD.bazel  Kbuild  Makefile
mtkcam/sched/: BUILD.bazel  Kbuild  Makefile
sched_cus/: Android.mk  BUILD.bazel  Kbuild  Makefile
sched_cus/src/: cpuqos_build_utility.o_shipped  cpuqos_build_utility_no_cfi.o_shipped  cpuqos_ext_ko.h  cpuqos_ext_main.c  eas_ext_grp.o_shipped  eas_ext_grp_no_cfi.o_shipped  eas_ext_ko.h  eas_ext_main.c  sched_ko.h  sched_main.c
task_turbo_cus/: Android.mk  BUILD.bazel  Kbuild  OWNERS
task_turbo_cus/src/: task_turbo_api.h  task_turbo_api.o_shipped  task_turbo_api_no_cfi.o_shipped  task_turbo_hook.o_shipped  task_turbo_hook_no_cfi.o_shipped  task_turbo_ko.h  task_turbo_main.c  task_turbo_main_shell.c
(+8612 files in other folders)
