load("//kernel_device_modules-5.15:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "wmt_chrdev_wifi",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "Kbuild.include",
        "//vendor/mediatek/kernel_modules/connectivity/common:headers",
        "//vendor/mediatek/kernel_modules/connectivity/conninfra:headers",
    ],
    outs = [
        "build/connac1x/wmt_chrdev_wifi.ko",
        "build/connac2x/wmt_chrdev_wifi_connac2.ko",
        "build/connac3x/wmt_chrdev_wifi_connac3.ko",
    ],
    deps = [
        "//vendor/mediatek/kernel_modules/connectivity/common:wmt_drv",
        "//vendor/mediatek/kernel_modules/connectivity/conninfra:conninfra",
    ],
)
