load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "jank_detection_core_cus",
    srcs = glob([
        "src/jank_detection_core_init.c",
        "src/jank_detection_core.o_shipped",
        "src/.jank_detection_core.o.cmd_shipped",
        "Kbuild",
        "Makefile",
    ]) + [
        "//vendor/mediatek/kernel_modules/afs_common_utils:headers",
    ],
    outs = ["jank_detection_core.ko"],
    deps = ["//vendor/mediatek/kernel_modules/afs_common_utils:jank_detection_common_utils"],
)

