load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "task_turbo_cus",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
        "**/*.o_shipped",
        "**/.*.o.cmd_shipped",
    ]),
    outs = ["task_turbo_v.ko",],
)
