load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "fmradio",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "Kbuild.include",
        "//vendor/mediatek/kernel_modules/connectivity/common:headers",
        "//vendor/mediatek/kernel_modules/connectivity/conninfra:headers",
    ],
    outs = [
        "Build/connac2x/fmradio_drv_connac2x.ko",
        "Build/mt6625/fmradio_drv_mt6625.ko",
        "Build/mt6627/fmradio_drv_mt6627.ko",
        "Build/mt6630/fmradio_drv_mt6630.ko",
        "Build/mt6631/fmradio_drv_mt6631.ko",
        "Build/mt6631_6635/fmradio_drv_mt6631_6635.ko",
        "Build/mt6635/fmradio_drv_mt6635.ko",
        "Build/soc/fmradio_drv_soc.ko",
    ],
    deps = [
        "//vendor/mediatek/kernel_modules/connectivity/common:wmt_drv",
        "//vendor/mediatek/kernel_modules/connectivity/conninfra:conninfra",
    ],
)
