load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "wmt",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//vendor/mediatek/kernel_modules/connectivity/bt/mt66xx:headers",
        "//vendor/mediatek/kernel_modules/connectivity/common:headers",
    ],
    outs = [
        "bt_drv_connac1x.ko",
    ],
    deps = [
        "//vendor/mediatek/kernel_modules/connectivity/common:wmt_drv",
    ],
)
