load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "public_headers",
    srcs = glob([
        "inc/*.h",
        "src-v4l2/frame-sync/frame_sync_camsys.h",
    ]),
)



define_mgk_ko(
    name = "mtk_imgsensor",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//vendor/mediatek/kernel_modules/mtkcam:public_headers",
        "//vendor/mediatek/kernel_modules/mtkcam:kbuild_makefiles",
        "//vendor/mediatek/kernel_modules/mtkcam/cam_cal:public_headers",
        "//vendor/mediatek/kernel_modules/mtkcam/cam_cal/src_v4l2:public_headers",
    ],
    deps = [
        "//vendor/mediatek/kernel_modules/mtkcam/cam_cal/src_v4l2/custom:mtk_cam_cal",
    ],
    outs = [
        "src-v4l2/imgsensor-glue/imgsensor-glue.ko",
        "src-v4l2/imgsensor.ko",
        "src-isp8/imgsensor-glue/imgsensor-glue_isp8.ko",
        "src-isp8/imgsensor_isp8.ko",
        "src_spm-isp8/imgsensor-glue/imgsensor-glue_spm_isp8.ko",
        "src_spm-isp8/imgsensor_spm_isp8.ko",
    ],
)
