load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")
package(
    default_visibility = [
        "//visibility:public",
    ],
)
mgk_aie_outs = [
    # keep sorted
    "mtk_aie.ko",
    "mtk_aie_debug_7sp.ko",
    "mtk_aie_debug_7sp_1.ko",
    "mtk_aie_debug_7sp_2.ko",
]

# TODO: enable this part later
define_mgk_ko(
    name = "mtk-aie",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//vendor/mediatek/kernel_modules/mtkcam:public_headers",
    ],

    outs = mgk_aie_outs,
)
