load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")
package(
    default_visibility = [
        "//visibility:public",
    ],
)
mgk_hcp_outs = [
    # keep sorted
    "mtk_hcp.ko",
]

filegroup(
    name = "public_headers",
    srcs = glob([
        "*.h",
    ]),
)

filegroup(
    name = "kbuild_makefiles",
    srcs = [
        "Kbuild",
        "Makefile",
    ],
)

# TODO: enable this part later
define_mgk_ko(
    name = "mtk-hcp",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) +[
        "//vendor/mediatek/kernel_modules/mtkcam/imgsys:public_headers",
    ],

   # deps = [
   #     "//vendor/mediatek/kernel_modules/mtkcam/imgsys:imgsys",
   #      "//vendor/mediatek/kernel_modules/mtkcam/mtk-ipesys-me:mtk-ipesys-me",
   # ],

    outs = mgk_hcp_outs,
)
