load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "headers",
    srcs = glob([
        "**/*.h",
    ]),
)

define_mgk_ko(
    name = "btmtk_uart_unify",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//vendor/mediatek/kernel_modules/connectivity/common:headers",
        "//vendor/mediatek/kernel_modules/connectivity/connfem:headers",
        "//vendor/mediatek/kernel_modules/connectivity/conninfra:headers",
    ],
    deps = [
        "//vendor/mediatek/kernel_modules/connectivity/common:wmt_drv",
        "//vendor/mediatek/kernel_modules/connectivity/connfem:connfem",
        "//vendor/mediatek/kernel_modules/connectivity/conninfra:conninfra",
    ],
)
