load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "gps_drv_stp",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//vendor/mediatek/kernel_modules/connectivity/common:headers",
    ],
    deps = [
        "//vendor/mediatek/kernel_modules/connectivity/common:wmt_drv",
    ],
)
