package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "public_headers",
    srcs = glob([
        "common/v2/**",
        "common/v2/*.h",
        "custom/*.h",
    ]),
)

filegroup(
    name = "kbuild_makefiles",
    srcs = [
        "Kbuild",
        "Makefile",
    ],
)
