load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "public_headers",
    srcs = glob([
        "frame-sync/*.h",
    ]),
)

define_mgk_ko(
    name = "mtk_imgsensor",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//vendor/mediatek/kernel_modules/mtkcam:public_headers",
        "//vendor/mediatek/kernel_modules/mtkcam/imgsensor:public_headers",
        "//vendor/mediatek/kernel_modules/mtkcam:kbuild_makefiles",
    ],
    outs = [
        "imgsensor-glue/imgsensor-glue.ko",
        "imgsensor.ko",
    ],
)
