
load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")
package(
    default_visibility = [
        "//visibility:public",
    ],
)
mgk_imgsys_outs = [
    # keep sorted
    "mtk_imgsys_v4l2.ko",
]

filegroup(
    name = "public_headers",
    srcs = glob([
        "*.h",
        "**/*.h",
    ]),
)

filegroup(
    name = "kbuild_makefiles",
    srcs = [
        "Kbuild",
        "Makefile",
    ],
)

# TODO: enable this part later
define_mgk_ko(
    name = "imgsys_common",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//vendor/mediatek/kernel_modules/mtkcam/mtk-hcp/legacy:public_headers",
        "//vendor/mediatek/kernel_modules/mtkcam/mtk-ipesys-me:public_headers",
        "//vendor/mediatek/kernel_modules/mtkcam/imgsys/imgsys/isp7sp:public_headers",
        "//vendor/mediatek/kernel_modules/mtkcam/mtk-hcp/legacy:kbuild_makefiles",
        "//vendor/mediatek/kernel_modules/mtkcam/mtk-ipesys-me:kbuild_makefiles",
    ],

    deps = [
        "//vendor/mediatek/kernel_modules/mtkcam/mtk-hcp/legacy:mtk-hcp",
        "//vendor/mediatek/kernel_modules/mtkcam/mtk-ipesys-me:mtk-ipesys-me",
    ],

    outs = mgk_imgsys_outs,
)
